created newproducts and fixed layout styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
-  max-width: 1168px;
+  text-align: center;
+}
+
+.container {
+  width: 1168px;
   margin: 0 auto;
-  background: #ececec;
 }
 
 @media all and (max-width: 1200px) {
