--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   margin: 0 auto;
 }
 
+.previousPrice {
+  text-decoration: line-through;
+  font-size: 0.8rem;
+  color: #adadad;
+}
+
 @media all and (max-width: 1200px) {
   div {
     width: 100%;
