--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.divider-line {
+  border-bottom: 1px solid grey;
+}
+
 .container {
   width: 1168px;
   margin: 0 auto;
@@ -34,6 +38,12 @@ label {
   margin-top: 1;
 }
 
+@media (max-width: 320px) {
+  p {
+    text-align: start;
+  }
+}
+
 @media all and (max-width: 1200px) {
   div {
     width: 100%;
@@ -43,5 +53,12 @@ label {
 @media all and (max-width: 480px) {
   div {
     width: 100%;
+  }
+}
+
+@media all and (max-width: 890px) {
+  .container {
+    max-width: 890px;
+    margin: 0 auto;
   }
 }
