--- a/src/components/search/SearchBar.css
+++ b/src/components/search/SearchBar.css
@@ -7,7 +7,7 @@
   border: 1px solid #e0e0e0;
   font-size: 18px;
   padding: 11px;
-  width: 589px;
+  width: 662px;
   height: 44px;
   font-weight: 400;
   font-size: 16px;
@@ -15,6 +15,9 @@
   display: flex;
   align-items: center;
   color: #1d1d1b;
+  z-index: 20;
+  position: relative;
+  margin-left: 35px;
 }
 
 .searchBtn {
@@ -22,6 +25,7 @@
   top: 10px;
   right: 10px;
   cursor: pointer;
+  z-index: 20;
 }
 
 input:focus {
@@ -32,14 +36,23 @@ input:focus {
 }
 
 .dataResult {
+  border-radius: 5px;
   position: absolute;
-  margin-top: 5px;
-  width: 589px;
-  height: 200px;
+  margin-top: -43px;
+  width: 701px;
+  height: 309px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
   overflow-y: auto;
+  z-index: 7;
+}
+
+.dataRes {
+  width: 701px;
+  height: 48px;
+  position: absolute;
+  background-color: white;
   z-index: 7;
 }
 
