--- a/src/components/carosel/MainCarosel.css
+++ b/src/components/carosel/MainCarosel.css
@@ -1,3 +1,7 @@
+.swiper-pagination {
+  position: static;
+}
+
 .swiper-pagination-bullet {
   background-color: rgb(5, 5, 5);
   display: inline-block;
@@ -5,15 +9,15 @@
   height: 0.5rem;
 }
 
-/* change color of next 2 bullets in sequence to white*/
-
 .swiper-pagination-bullet-active-next,
 .swiper-pagination-bullet-active-next-next {
   background-color: white;
 }
 
-/* change color of previous bullet to white*/
-
 .swiper-pagination-bullet-active-prev {
   background-color: white;
+}
+
+.wrapper {
+  padding-bottom: 15px;
 }
