--- a/src/components/main/newProduct/NewProducts.module.css
+++ b/src/components/main/newProduct/NewProducts.module.css
@@ -5,10 +5,35 @@
   margin-top: 18px;
 }
 
+@media all and (max-width: 320px) {
+  .content {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-y: auto;
+  }
+  .content::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+}
+
 .title {
   font-weight: 500;
   font-size: 24px;
   line-height: 29px;
   color: #393939;
   margin-top: 44px;
+}
+
+.button {
+  width: 107px;
+  height: 32px;
+  margin-top: 16px;
+  cursor: pointer;
+}
+
+@media all and (max-width: 320px) {
+  .button {
+    display: none;
+  }
 }
