--- a/src/pages/cart/Cart.module.css
+++ b/src/pages/cart/Cart.module.css
@@ -6,6 +6,12 @@
   margin-top: 48;
 }
 
+@media all and (max-width: 320px) {
+  .content {
+    display: none;
+  }
+}
+
 .title {
   font-weight: 500;
   font-size: 24px;
