--- a/src/components/main/bestSeller/BestSeller.module.css
+++ b/src/components/main/bestSeller/BestSeller.module.css
@@ -4,11 +4,17 @@
   justify-content: space-between;
   margin-top: 18px;
 }
+
 @media all and (max-width: 320px) {
   .content {
     display: flex;
     flex-wrap: nowrap;
     overflow-y: auto;
+  }
+
+  .content::-webkit-scrollbar {
+    width: 0;
+    height: 0;
   }
 }
 
@@ -25,10 +31,4 @@
   height: 32px;
   margin-top: 16px;
   cursor: pointer;
-}
-
-@media all and (max-width: 320px) {
-  .button {
-    display: none;
-  }
 }
