--- a/src/ui/content/Content.module.css
+++ b/src/ui/content/Content.module.css
@@ -10,8 +10,7 @@
 
 @media all and (max-width: 320px) {
   .container {
-    padding-right: 8px;
-    margin-left: 16px;
+    margin-left: 4px;
   }
 }
 
@@ -46,14 +45,16 @@
   left: 5px;
 }
 
-.title {
+.content_title {
   margin-top: 5px;
+  font-weight: 400;
   font-size: 14px;
   line-height: 17px;
+  text-align: justify;
   color: #393939;
 }
 
-.priceTitle {
+.content_priceTitle {
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
