--- a/src/components/search/SearchBar.css
+++ b/src/components/search/SearchBar.css
@@ -20,12 +20,28 @@
   margin-left: 35px;
 }
 
+@media all and (max-width: 320px) {
+  .search input {
+    position: absolute !important;
+    width: 288px;
+    top: 80px;
+    right: 7px;
+  }
+}
+
 .searchBtn {
   position: absolute;
   top: 10px;
   right: 10px;
   cursor: pointer;
   z-index: 20;
+}
+
+@media all and (max-width: 320px) {
+  .searchBtn {
+    position: absolute !important;
+    top: 90px;
+  }
 }
 
 input:focus {
@@ -46,6 +62,15 @@ input:focus {
   overflow: hidden;
   overflow-y: auto;
   z-index: 2;
+}
+
+@media all and (max-width: 320px) {
+  .dataResult {
+    position: absolute !important;
+    top: 130px;
+    width: 288px;
+    right: 7px;
+  }
 }
 
 .dataRes {
