--- a/src/components/modal/modalForm/ModalForm.module.css
+++ b/src/components/modal/modalForm/ModalForm.module.css
@@ -1,13 +1,10 @@
 .layout {
-  width: 450px;
-  height: 652px;
+  width: 440px;
+  height: 672px;
 }
 
 .form {
-  width: 392px;
-  height: 608px;
-  margin: 32px 24px;
-  padding: 0px;
+  padding: 32px 24px;
   gap: 32px;
 }
 
@@ -71,11 +68,6 @@
     height: 41px;
     margin-top: 2px;
   }
-
-  /* .input::placeholder {
-    font-size: 12px;
-    line-height: 15px;
-  } */
 }
 
 @media all and (max-width: 320px) {
