--- a/src/components/modal/modalSuccess/SuccessModal.module.css
+++ b/src/components/modal/modalSuccess/SuccessModal.module.css
@@ -2,6 +2,12 @@
   width: 328px;
 }
 
+@media all and (max-width: 320px) {
+  .layout {
+    width: 288px;
+  }
+}
+
 .content {
   padding: 28px 24px;
 }
