--- a/src/App.css
+++ b/src/App.css
@@ -32,12 +32,12 @@
 input[type='radio']:checked + label::before {
   position: absolute;
   content: '';
-  top: 0;
-  left: 0;
+  top: -4px;
+  left: -4px;
   right: 0;
   bottom: 0;
-  width: 16px;
-  height: 16px;
+  width: 18px;
+  height: 18px;
   background-color: transparent;
   border: 1px solid grey;
 }
@@ -59,98 +59,6 @@ input[type='submit'] {
 
 input[disabled] {
   background-color: grey;
-}
-
-.success-container {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  height: 100%;
-  overflow-y: auto;
-  padding: 3rem 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 999999;
-
-  background-color: rgba(0, 0, 0, 0.4);
-  transition: all 0.2s ease-in 0s;
-}
-
-.success-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.success-modal {
-  color: rgb(34, 34, 34);
-  background-color: white;
-  width: 328px;
-  height: 264px;
-  border-top: 0.0625rem solid rgb(239, 239, 239);
-  border-bottom: 00.0625rem solid rgb(239, 239, 239);
-  margin: auto;
-  box-shadow: rgba(0, 0, 0, 0.15) 0 0.625rem 1.25rem,
-    rgba(0, 0, 0, 0.1) 0 0.1875rem 0.375rem;
-  overflow: hidden;
-  display: block;
-  margin-top: 252px;
-}
-@media all and (max-width: 320px) {
-  .success-modal {
-    max-width: 288px;
-    height: 246px;
-  }
-}
-
-.request-container {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  height: 100%;
-  overflow-y: auto;
-  padding: 3rem 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 999999;
-  background-color: rgba(0, 0, 0, 0.4);
-  transition: all 0.2s ease-in 0s;
-}
-
-.request-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.request-modal {
-  color: rgb(34, 34, 34);
-  background-color: white;
-  width: 436px;
-  height: 316px;
-  border-top: 0.0625rem solid rgb(239, 239, 239);
-  border-bottom: 00.0625rem solid rgb(239, 239, 239);
-  margin: auto;
-  box-shadow: rgba(0, 0, 0, 0.15) 0 0.625rem 1.25rem,
-    rgba(0, 0, 0, 0.1) 0 0.1875rem 0.375rem;
-  overflow: hidden;
-  display: block;
-  margin-top: 226px;
-}
-
-@media all and (max-width: 320px) {
-  .request-modal {
-    max-width: 288px;
-    height: 274px;
-  }
 }
 
 .scale-hover {
