--- a/src/components/modal/modalForm/ModalForm.module.css
+++ b/src/components/modal/modalForm/ModalForm.module.css
@@ -3,6 +3,12 @@
   height: 672px;
 }
 
+@media all and (max-width: 320px) {
+  .layout {
+    width: 288px;
+  }
+}
+
 .form {
   padding: 32px 24px;
   gap: 32px;
