--- a/src/components/modal/modalRequest/ModalRequest.module.css
+++ b/src/components/modal/modalRequest/ModalRequest.module.css
@@ -3,6 +3,13 @@
   height: 316px;
 }
 
+@media all and (max-width: 320px) {
+  .layout {
+    width: 288px;
+    height: 282px;
+  }
+}
+
 .form {
   padding-top: 5px;
   position: relative;
