--- a/src/pages/news/News.module.css
+++ b/src/pages/news/News.module.css
@@ -9,6 +9,12 @@
   padding-top: 8px;
 }
 
+@media all and (max-width: 320px) {
+  .title {
+    padding-left: 16px;
+  }
+}
+
 .container {
   display: flex;
   background: white;
