--- a/src/ui/BreadCrumbs/BreadCrumbs.module.css
+++ b/src/ui/BreadCrumbs/BreadCrumbs.module.css
@@ -27,3 +27,10 @@
   margin-left: 16px;
   margin-right: 16px;
 }
+
+@media all and (max-width: 320px) {
+  .slash {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+}
