--- a/src/ui/content/Content.module.css
+++ b/src/ui/content/Content.module.css
@@ -10,7 +10,7 @@
 
 @media all and (max-width: 320px) {
   .container {
-    margin-left: 4px;
+    width: 262px;
   }
 }
 
@@ -19,6 +19,7 @@
   cursor: pointer;
   top: 1%;
   right: 3%;
+  z-index: 3;
 }
 
 .hearted {
@@ -59,12 +60,14 @@
   font-size: 16px;
   line-height: 20px;
   color: #393939;
+  margin-top: 5px;
 }
 
 .colors {
   display: flex;
   flex-direction: row;
   margin: 5px auto;
+  padding-bottom: 6px;
 }
 
 .color {
@@ -87,4 +90,42 @@
 
 .images {
   width: 100%;
+  height: 437px;
+  display: inline-block;
+}
+
+.slideshow {
+  margin: 0 auto;
+  overflow: hidden;
+  max-width: 286px;
+  position: relative;
+}
+
+.slideshowSlider {
+  white-space: nowrap;
+  transition: 500ms;
+  position: relative;
+  z-index: 1;
+}
+
+.line {
+  transition: right 1.5s;
+  width: 63px;
+  height: 3px;
+  background: #fff;
+  z-index: 10;
+  transition: all 0.3s;
+}
+
+.line_layout {
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  bottom: 103px;
+  display: none;
+  padding: 0 8px;
+}
+
+.container:hover .line_layout {
+  display: block;
 }
