--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ input[type='submit'] {
   height: 44px;
   background: black;
   color: #fff;
-  border: 1px solid #999;
+  /* border: 1px solid #999; */
   /* margin-top: 32px; */
 }
 
