--- a/src/components/auth/authForm/Form.module.css
+++ b/src/components/auth/authForm/Form.module.css
@@ -1,6 +1,5 @@
 .layout {
   width: 392px;
-  height: 316px;
   margin: 0 auto;
 }
 
@@ -21,9 +20,9 @@
 
 .form_input input {
   border: none;
-  margin: 5px;
   padding: 10px 12px;
-  width: 392px;
+  width: 100%;
   height: 44px;
   background: #ffffff;
+  border: 1px solid lightgray;
 }
