--- a/src/pages/cart/Cart.module.css
+++ b/src/pages/cart/Cart.module.css
@@ -2,8 +2,14 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding-bottom: 16px;
+  padding-bottom: 96px;
   margin-top: 48;
+}
+
+@media all and (max-width: 320px) {
+  .container {
+    padding-bottom: 0px;
+  }
 }
 
 @media all and (max-width: 320px) {
