--- a/src/ui/CollectionList/CollectionList.module.css
+++ b/src/ui/CollectionList/CollectionList.module.css
@@ -35,7 +35,13 @@
   font-size: 24px;
   line-height: 29px;
   color: #393939;
-  text-align: center;
+  text-align: start;
+}
+
+@media all and (max-width: 320px) {
+  .interested_title {
+    padding-left: 16px;
+  }
 }
 
 .interestedProducts {
