--- a/src/components/auth/login/Login.module.css
+++ b/src/components/auth/login/Login.module.css
@@ -27,3 +27,9 @@
   font-size: 16px;
   line-height: 20px;
 }
+
+@media all and (max-width: 320px) {
+  .horizontal_divider {
+    display: none;
+  }
+}
