--- a/src/components/interestedProducts/InterestedProducts.module.css
+++ b/src/components/interestedProducts/InterestedProducts.module.css
@@ -1,11 +1,15 @@
 .container {
   width: 226px;
   height: 420px;
-  /* background: white; */
   margin: 16px 4px 64px 0;
   text-align: start;
-  /* border: 1px solid #f1f1f1; */
   position: relative;
+}
+
+@media all and (max-width: 320px) {
+  .container {
+    margin: 4px;
+  }
 }
 
 .container:hover .hearted {
@@ -85,7 +89,7 @@
 .color {
   width: 8px;
   height: 8px;
-  border: solid 0.2px;
+  border: solid 0.2px rgba(209, 209, 209, 1);
   border-radius: 4px;
   margin-right: 12px;
   margin-top: 6px;
@@ -94,14 +98,12 @@
 
 .images {
   width: 100%;
-  /* height: 332px; */
   display: inline-block;
 }
 
 .slideshow {
   margin: 0 auto;
   overflow: hidden;
-  /* max-width: 286px; */
   position: relative;
 }
 
@@ -125,11 +127,16 @@
   width: 100%;
   position: absolute;
   z-index: 1;
-  bottom: 90px;
+  bottom: 105px;
   display: none;
   padding: 0 8px;
 }
 
 .container:hover .line_layout {
   display: block;
+}
+
+.discount {
+  position: absolute !important;
+  z-index: 5;
 }
