--- a/src/components/product/Product.module.css
+++ b/src/components/product/Product.module.css
@@ -1,6 +1,5 @@
 .section {
   width: 624px;
-
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -76,12 +75,29 @@
 }
 
 .title {
-  /* margin-top: 32px; */
   font-weight: 500;
   font-size: 24px;
   line-height: 29px;
   color: #393939;
   text-align: start;
+}
+
+.sameProductTitle {
+  margin-top: 32px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  color: #393939;
+  text-align: start;
+}
+
+@media all and (max-width: 320px) {
+  .sameProductTitle {
+    text-align: center;
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 16px;
+  }
 }
 
 @media all and (max-width: 320px) {
