--- a/src/components/search/SearchPage.module.css
+++ b/src/components/search/SearchPage.module.css
@@ -11,6 +11,19 @@
     display: flex;
     flex-direction: column;
     margin-top: 0;
+    padding: 0 16px;
+  }
+}
+
+.interestPost {
+  display: flex;
+}
+
+@media (max-width: 320px) {
+  .interestPost {
+    display: flex;
+    margin-top: 0;
+    overflow-x: auto;
   }
 }
 
@@ -24,6 +37,13 @@
   margin-top: 48px;
 }
 
+@media (max-width: 320px) {
+  .title {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
 .text {
   font-style: normal;
   font-weight: 400;
@@ -31,6 +51,13 @@
   line-height: 20px;
   color: #393939;
   padding-top: 16px;
+}
+
+@media (max-width: 320px) {
+  .text {
+    font-size: 13px;
+    line-height: 16px;
+  }
 }
 
 .description {
@@ -56,6 +83,12 @@
 
 @media (max-width: 320px) {
   .section {
-    padding: 16px;
+    padding: 16px 0 16px 16px;
+  }
+}
+
+@media (max-width: 320px) {
+  .pagination_container {
+    padding: 16px 0;
   }
 }
