--- a/src/pages/collections/Collections.module.css
+++ b/src/pages/collections/Collections.module.css
@@ -30,8 +30,12 @@
   padding-top: 32px;
   text-align: start;
 }
-@media all and (max-width: 320px) {
-  .title {
-    padding-left: 16px;
+
+@media (max-width: 320px) {
+  .pagination_container {
+    /* padding: 0 16px; */
+    text-align: end;
+    display: flex;
+    justify-content: end;
   }
 }
