--- a/src/pages/help/help/HelpCard.module.css
+++ b/src/pages/help/help/HelpCard.module.css
@@ -25,3 +25,18 @@
   font-size: 14px;
   line-height: 160%;
 }
+
+@media all and (max-width: 320px) {
+  .text {
+    font-size: 12px;
+    line-height: 19px;
+    /* or 19px */
+  }
+}
+
+@media all and (max-width: 320px) {
+  .content h4 {
+    font-size: 13px;
+    line-height: 16px;
+  }
+}
