--- a/src/ui/content/Content.module.css
+++ b/src/ui/content/Content.module.css
@@ -22,6 +22,13 @@
   z-index: 3;
 }
 
+@media all and (max-width: 320px) {
+  .container .hearted {
+    position: absolute;
+    z-index: 5;
+  }
+}
+
 .hearted {
   position: absolute;
   cursor: pointer;
